# DeepInvirus

./: .gitignore  CHANGELOG.md  README.md  main.nf  nextflow.config  pyproject.toml  pytest.ini
assets/: ANALYSIS_GUIDE.md  dashboard_template.html  empty_ictv_vmr.tsv
conf/: base.config  docker.config  singularity.config  test.config
containers/assembly/: Dockerfile
containers/classify/: Dockerfile
containers/detect/: Dockerfile
containers/qc/: Dockerfile
containers/reporting/: Dockerfile
docs/: DASHBOARD_UPGRADE_PLAN.md  DATABASE_GUIDE.md
docs/planning/: 01-prd.md  02-trd.md  03-user-flow.md  04-database-design.md  05-design-system.md  06-tasks-tui.md  06-tasks.md  07-coding-convention.md  08-workplan-bugfix-report.md  09-comprehensive-review.md  10-workplan-v2-report-framework.md  11-dashboard-report-upgrade.md  12-pipeline-v2-multidb-filtering.md  13-deepinvirus-hybrid-v1.md  14-dashboard-v5-workplan.md
modules/local/: bbduk.nf  blastn_tier3_nt.nf  blastn_tier4_nt.nf  bracken.nf  checkv.nf  classify_contigs.nf  cluster_contigs.nf  coverm.nf  dashboard.nf  diamond.nf  diamond_exclusion.nf  diamond_tier1_aa.nf  diamond_tier2_aa.nf  diversity.nf  evidence_integration.nf  fastp.nf  fastqc.nf  genomad.nf  host_removal.nf  input_check.nf  kraken2.nf  kraken2_extract.nf  krona.nf  megahit.nf  merge_detection.nf  merge_results.nf  metaspades.nf  mmseqs_taxonomy.nf  multiqc.nf  prodigal.nf  report.nf  samtools_depth.nf  taxonkit.nf
subworkflows/: assembly.nf  classification.nf  detection.nf  iterative_classification.nf  preprocessing.nf  reporting.nf
tests/: __init__.py  conftest.py  test_cli.py  test_db_cli.py  test_db_indexer.py  test_db_lifecycle.py  test_host_db.py  test_parallel_blast.py  test_ramdisk.py  test_recovery.py
(+44 files in other folders)
