[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepinvirus"
version = "0.1.0"
description = "Raw FASTQ →论文/보고서급 결과물 자동 출력 바이러스 메타게노믹스 파이프라인"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-bio>=0.6",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "python-docx>=1.1",
    "jinja2>=3.1",
    "click>=8.0",
    "textual>=0.47",
    "pyyaml>=6.0",
]

[project.scripts]
deepinvirus = "deepinvirus_cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "black>=23.9",
    "mypy>=1.5",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist",
    "work",
    ".nextflow",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "RUF",    # ruff specific
]
ignore = [
    "E501",   # line-too-long (handled by black)
    "C901",   # function-is-too-complex (refactoring needed)
]

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | build
    | dist
    | work
    | \.nextflow
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
